# automating-anki

./: .pre-commit-config.yaml  LICENSE  README.md  _old_pyproject.toml  pyproject.toml  setup.cfg
src/automating_anki/: __init__.py  ankiAPI.py  browser.py  germanGenderIndicators.py  main.py  note.py
tests/: __init__.py  test_browser.py
