[tool.poetry]
name = "automating-anki"
version = "0.1.0"
description = "Automating the creation of Anki flashcards for language learning"
authors = ["Liam van der Poel"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "automating_anki.main:cli"
